--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -723,6 +723,9 @@ and an empty NAME has been provided.")
    _init_cmake_variable(Boost_LIBRARY_DIR_RELEASE)
    _init_cmake_variable(Boost_PYTHON_LIBRARY_DEBUG)
    _init_cmake_variable(Boost_PYTHON_LIBRARY_RELEASE)
+   _init_cmake_variable(Boost_PYTHON_3_LIBRARY)
+   _init_cmake_variable(Boost_PYTHON_3_LIBRARY_DEBUG)
+   _init_cmake_variable(Boost_PYTHON_3_LIBRARY_RELEASE)
    _init_cmake_variable(PYTHON_INCLUDE_DIR)
    _init_cmake_variable(PYTHON_LIBRARY)
    _init_cmake_variable(PYTHON_LIBRARY_DEBUG)
